# wit

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py  storage.py
backend/tests/: test_api.py
data/pages/: sample-child.md  sample-parent.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: PageEditor.tsx  PageNavButtons.tsx  PinnedBlockPreviewModal.tsx  PinnedSection.tsx  SidebarTree.tsx  WitCollapsedPinControl.tsx  WitDragHandleMenu.tsx  WitEditorSideMenu.tsx  WitSettingsMenu.tsx
frontend/src/context/: WitPinsContext.tsx
frontend/src/hooks/: usePages.ts
frontend/src/lib/: applyTreeMove.ts  blocknotePersistence.ts  cardBlock.tsx  contentDistribution.ts  internalLinks.ts  notionImport.ts  pageLinkBlock.tsx  pinBlockPreview.ts  search.ts  tree.ts  witAppearance.ts  witBlockNoteSchema.ts  witPins.ts
