[project]
name = "wit-backend"
version = "0.1.0"
description = "Thin FastAPI server for wit markdown pages"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
